error fix pass and id

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_URI="mongodb+srv://satyaprakash3134_db_user:YOUR_PASSWORD@cluster0.jakxztz.mongodb.net/myDatabase"
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/portfolio-user
-
 # mongodb+srv://satyaprakash3134_db_user:satyaprakash3134@cluster0.jakxztz.mongodb.net/?appName=Cluster0
+
+ADMIN_USER=SatyaPrakash
+ADMIN_PASSWORD=SatyaPrakash
