error fix pass and id

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-MONGO_URI="mongodb+srv://satyaprakash3134_db_user:YOUR_PASSWORD@cluster0.jakxztz.mongodb.net/myDatabase"
+MONGO_URI="mongodb+srv://satyaprakash3134_db_user:satyaprakash3134@cluster0.jakxztz.mongodb.net/portfolio-user?appName=Cluster0"
 PORT=5000
-# mongodb+srv://satyaprakash3134_db_user:satyaprakash3134@cluster0.jakxztz.mongodb.net/?appName=Cluster0
 
 ADMIN_USER=SatyaPrakash
 ADMIN_PASSWORD=SatyaPrakash
